# Nani

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  NaniRunner.cpp  NaniRunner.hpp  NaverDict.cpp  NaverDict.hpp  nani.json  nani_plugin.cpp
